added reset game and score

--- a/rps.css
+++ b/rps.css
@@ -47,7 +47,16 @@ p {
 
 #result {
 	position: absolute;
-	top: 550px;
-	left: 100px;
+	top: 350px;
+	left: 500px;
 }
 
+#result p {
+	font-size: 24px;
+}
+
+#reset {
+	position: absolute;
+	top: 550px;
+	left: 500px;
+}
